--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,7 +126,7 @@ hr {
 
 
 body {
-    background-color: #ecf7fd;
+    background-color: #ffffff;
     font-family: sans-serif, Microsoft Yahei, Helvetica Neue;
     zoom: 90%;
 }
